# Aurora

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
scenes/: 1.json  cornellBox.json  cornellBox_v0.json
scenes/cornellBox/: cornellBox.json
scenes/diablo3/: cornellBox.json
src/: Aurora.cpp  main.cpp
src/accelerators/: ArHitableList.cpp  ArHitableList.h  ArKDTree.cpp  ArKDTree.h  ArLinearAggregate.cpp  ArLinearAggregate.h
src/cameras/: ArPerspectiveCamera.cpp  ArPerspectiveCamera.h
src/core/: AABB.cpp  AABB.h  ArAurora.h  ArBSDF.cpp  ArBSDF.h  ArCamera.cpp  ArCamera.h  ArEntity.cpp  ArEntity.h  ArFilm.cpp  ArFilm.h  ArFilter.cpp  ArFilter.h  ArHitable.cpp  ArHitable.h  ArIntegrator.cpp  ArIntegrator.h  ArInteraction.cpp  ArInteraction.h  ArLight.cpp  ArLight.h  ArLightDistrib.cpp  ArLightDistrib.h  ArMaterial.cpp  ArMaterial.h  ArMathUtils.h  ArMemory.cpp  ArMemory.h  ArParallel.cpp  ArParallel.h  ArParser.cpp  ArParser.h  ArPathIntegrator.cpp  ArPathIntegrator.h  ArReporter.cpp  ArReporter.h  ArRng.h  ArRtti.cpp  ArRtti.h  ArSampler.cpp  (+50 more)
src/filters/: ArBoxFilter.cpp  ArBoxFilter.h
src/integrators/: ArPathIntegrator.cpp  ArWhittedIntegrator.cpp  ArWhittedIntegrator.h
src/lights/: ArDiffuseAreaLight.cpp  ArDiffuseAreaLight.h
src/main/: Aurora.cpp
src/materials/: ArLambertianMaterial.cpp  ArLambertianMaterial.h  ArMirrorMaterial.cpp  ArMirrorMaterial.h
src/math/: MathUtils.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
src/samplers/: ArRandomSampler.cpp  ArRandomSampler.h
src/shapes/: ArSphereShape.cpp  ArSphereShape.h  ArTriangleShape.cpp  ArTriangleShape.h
